--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,7 +3,6 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  position: absolute;
   padding-top: 25px;
   padding-bottom: 25px;
   bottom: 0;
