--- a/src/components/Tools.css
+++ b/src/components/Tools.css
@@ -6,7 +6,7 @@
   align-items: space-around;
   margin-left: 30%;
   margin-right: 30%;
-  margin-bottom: 25px;
+  margin-bottom: 75px;
   padding-bottom: 30px;
 }
 
